build(vscode): :art: Add build task with environment variables